# Icarus-X

./: .env.example  .gitignore  LICENSE  PORTFOLIO.md  README.md  SETUP.md  icarus.py  icarus.toml  pyproject.toml  requirements.txt
artifacts/: .gitkeep
core/: __init__.py  ai_engine.py  reporter.py  scanner.py  workflow.py
models/: __init__.py  finding.py  target.py  workflow.py
modules/: __init__.py  dashboard.py  dirbrute.py  exploit.py  netmap.py  nuclei.py  payloads.py  postexploit.py  recon.py  spider.py  targets.py  techdetect.py  vuln_scan.py
screenshots/: .gitkeep
tests/: __init__.py  test_cli.py  test_models.py  test_scanner.py
utils/: __init__.py  async_helpers.py  config.py  dashboard_integration.py  logger.py  server.py  tools.py  wordlists.py
